<resources>
    <string name="app_name">WaveRecorder</string>
    <string name="title_waveitem_detail">WaveItem Detail</string>
    <string name="wave_audio_record">Wav Audio Recorder</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_acces">Acces</string>

    <string name="frequency_header">Frequency of sampler</string>
    <string name="frequency_44100">44100 Hz</string>
    <string name="frequency_22050">22050 Hz</string>
    <string name="frequency_11025">11025 Hz</string>
    <string name="frequency_8000">8000 Hz</string>

    <string name="duration_header">Duration</string>
    <string name="duration_12000">12000 ms</string>
    <string name="duration_48000">48000 ms</string>
    <string name="duration_60000">60000 ms</string>

    <string name="button_star">Start</string>
    <string name="button_stop">Stop</string>

    <string name="default_filename">testwave</string>

    <string name="create_dir_ok">Successfully created wave-recorder directory</string>
    <string name="create_dir_fail">Failed to create wave-recorder directory</string>

    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="recorder_error">Failed to record wav file</string>
    <string name="recorder_display">recording saved to: </string>
    <string name="recorder_remaining">seconds remaining: </string>
    <string name="recorder_almost">almost done!</string>
    <string name="title_activity_chart">ChartActivity</string>

    <string name="button_oscilogram">Oscilogram</string>
    <string name="button_play">Play audio</string>
    <string name="title_wavitem_list">WavItems</string>
    <string name="title_wavitem_detail">WavItem Detail</string>

    <string name="menu_insert">New wav recorder</string>
    <string name="no_reminders">No wav recorder yet</string>
    <string name="menu_delete">Delete wav file</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_sheet">SheetActivity</string>

    <string name="filename">Filename:</string>
    <string name="FileSizeBytes">FileSizeBytes:</string>
    <string name="KB">KB</string>
    <string name="SampleRate">SampleRate:</string>
    <string name="Hz">Hz</string>
    <string name="BitrateKbps">BitrateKbps:</string>
    <string name="kbps">kbps</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
